:bug: put back scrolling :lipstick: long titles don't overflow

--- a/gatsby-site/src/components/layout.module.scss
+++ b/gatsby-site/src/components/layout.module.scss
@@ -75,6 +75,7 @@ $footerHeight: 60px;
     flex-direction: column;
     align-items: center;
     margin-top: -1 * $headerHeight;
+    max-height: 100%;
 }
 
 .appFooter {
